# ir100-py

./: README.md  pyproject.toml
src/ir100_py/: __init__.py  preparation.py
src/scripts/: main.py
