[project]
name = "ir100-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tcy8021" }
]
dependencies = [
    "polars>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ir100_py"]
